# deepstream_from_scratch

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/deepstream_test1/: CMakeLists.txt  deepstream_test1.cpp
apps/gstreamer/: CMakeLists.txt  gstreamer.cpp
apps/license_plate_recognition/: CMakeLists.txt  lpr.cpp
apps/save_image_deepstream/: CMakeLists.txt  save_image_deepstream.cpp
apps/tiny_yolo2_deepstream/: CMakeLists.txt  tiny_yolo2_deepstream.cpp  tiny_yolo2_deepstream.txt
apps/using_bin/: CMakeLists.txt  using_bin.cpp  using_bin_config.txt
doc/: bin_element.md  create_container.md  deepstream_metadata.md  deepstream_test1.md  deepstream_yolo.md  install_cmake.md  run_nvidia_deepstream_example.md  save_image_deepstream.md  tensorrt_gstreamer_plugin.md  tracking.md
include/deepstream_test1/: deepstream_test1.hpp
include/gstreamer/: gstreamer_example.hpp
include/license_plate_recognition/: license_plate_recognition.hpp
scripts/: run.sh
src/: CMakeLists.txt
src/deepstream_test1/: deepstream_test1.cpp
src/gstreamer/: gstreamer_example.cpp
src/license_plate_recognition/: license_plate_recognition.cpp
src/license_plate_recognition/nvinfer_custom_lpr_parser/: nvinfer_custom_lpr_parser.cpp
src/license_plate_recognition/tao_converter/: Readme.txt  convert.sh  tao-converter
src/save_image_deepstream/: save_image_deepstream.cpp
src/tiny_yolo2_deepstream/: tiny_yolo2_deepstream.cpp
src/tiny_yolo2_deepstream/custom_bbox_parser/: Makefile  nvdsparsebbox_tiny_yolo.cpp
src/using_bin/: using_bin.cpp
(+6 files in other folders)
